<resources>
	<string name="app_name">AEOnlineSchedule</string>
	<string name="schedule">Schedule</string>
	<string name="invoice">Invoice</string>
	<string name="students_name">Student\'s Name</string>
	<string name="class_date">Class Date:</string>
	<string name="click_to_set">(click to set)</string>
	<string name="time_in_china">Time in China:</string>
	<string name="notes_about_class">Notes about class</string>
	<string name="create_class">Create class</string>
	<string name="my_classes">My Classes</string>
	<string name="options">Options</string>
	<string name="edit">edit</string>
	<string name="add_new_class_type">Add New Class Type</string>
	<string name="rate">Rate:</string>
	<string name="length">Length:</string>
	<string name="class_types">Class Types:</string>
	<string name="no_scheduled_classes">No scheduled classes!</string>
	<string name="add_new_student">Add New Student</string>
	<string name="delete_class">Delete Class</string>
	<string name="past_classes">Past Classes</string>
	<string name="ok">OK</string>
	<string name="chinese_name">Chinese Name</string>
	<string name="english_name">English Name</string>
	<string name="notes">Notes</string>
	<string name="home_town">Home Town</string>
	<string name="current_location">Current Location</string>
	<string name="default_class_type">Default Class Type:</string>
	<string name="click_to_select">Click to Select</string>
</resources>
