<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="4dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="4dp">

			<EditText
				android:id="@+id/studentNameEdit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/english_name"/>

			<EditText
				android:id="@+id/studentNameChineseEdit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/chinese_name"/>

			<EditText
				android:id="@+id/homeTownEdit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/home_town"/>

			<EditText
				android:id="@+id/currentTownEdit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/current_location"/>

			<EditText
				android:id="@+id/notesEdit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/notes"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/default_class_type"
				android:textColor="@color/colorTextLight"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/defaultClassTypeText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/click_to_select"
				android:padding="4dp"
				android:textColor="@color/colorTextLight"
				android:textSize="18sp"
				android:textStyle="italic"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>