<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:paddingLeft="8dp"
	android:paddingRight="8dp"
	android:paddingTop="8dp">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

		<EditText
			android:id="@+id/studentNameEdit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginBottom="8dp"
			android:hint="@string/students_name"
			android:textAlignment="center"
			android:textSize="24sp"/>

		<TextView
			android:id="@+id/classDateLabel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/studentNameEdit"
			android:text="@string/class_date"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/classDateValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_below="@id/classDateLabel"
			android:text="@string/click_to_set"
			android:textAlignment="center"
			android:textSize="24sp"/>


		<TextView
			android:id="@+id/classTimeLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/classDateValue"
			android:text="@string/time_in_china"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/classTimeValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_below="@id/classTimeLabel"
			android:text="@string/click_to_set"
			android:textAlignment="center"
			android:textSize="24sp"/>

		<TextView
			android:id="@+id/classTypesLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/classTimeValue"
			android:text="@string/class_types"
			android:gravity="center"
			android:layout_alignTop="@id/editLabel"
			android:layout_alignBottom="@id/editLabel"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/editLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/classTimeValue"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:layout_toEndOf="@id/classTypesLabel"
			android:text="@string/edit"
			android:textColor="@color/colorPrimary"
			android:textSize="16sp"/>

		<com.google.android.flexbox.FlexboxLayout
			android:id="@+id/classTypeLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/classTypesLabel"
			app:justifyContent="center"
			app:flexWrap="wrap">

		</com.google.android.flexbox.FlexboxLayout>

		<EditText
			android:id="@+id/notesEdit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/classTypeLayout"
			android:layout_marginBottom="16dp"
			android:gravity="top"
			android:hint="@string/notes_about_class"
			android:lines="2"
			android:textSize="24sp"/>

		<Button
			android:id="@+id/createClassButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/notesEdit"
			android:text="@string/create_class"/>

	</RelativeLayout>
</android.support.v7.widget.CardView>